--- a/.env.example
+++ b/.env.example
@@ -109,7 +109,7 @@ WORKSPACE_COMPOSER_AUTH_JSON=false
 WORKSPACE_COMPOSER_REPO_PACKAGIST=
 WORKSPACE_NVM_NODEJS_ORG_MIRROR=
 WORKSPACE_INSTALL_NODE=true
-WORKSPACE_NODE_VERSION=node
+WORKSPACE_NODE_VERSION=v19.0.0
 WORKSPACE_NPM_REGISTRY=
 WORKSPACE_NPM_FETCH_RETRIES=2
 WORKSPACE_NPM_FETCH_RETRY_FACTOR=10
@@ -346,7 +346,7 @@ PHP_WORKER_PGID=1000
 
 ### NGINX #################################################
 
-NGINX_HOST_HTTP_PORT=80
+NGINX_HOST_HTTP_PORT=8000
 NGINX_HOST_HTTPS_PORT=443
 NGINX_HOST_LOG_PATH=./logs/nginx/
 NGINX_SITES_PATH=./nginx/sites/
